[package]
name = "cf_to_txt"
version = "0.1.0"
authors = ["Tarun Jaiswal <tarunjais28@gmail.com>"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
sdb_dyn_proto_rdr = { path = "../Libraries/sdb_dyn_proto_rdr" }
rbdate = { path = "../Libraries/RBDate" }
sdb_io = { path = "../Libraries/sdb_io" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
